# YouTube-Sleep-Queue

./: .dockerignore  .env.example  .gitignore  .versionrc.json  Dockerfile  README.md  UPSTREAM.md  docker-compose.yml  fly.toml.example  package.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docker-publish.yml
dashboard/: README.md  __init__.py  channels.html  channels.js  config.html  config.js  index.html  script.js
dashboard/backend/: README.md  __init__.py  app.py  channels_api.py  config_api.py  config_manager.py  refresh_jobs.py  run.py  stats_api.py
docker/: entrypoint.sh
docs/: DEPLOY.md  PHASE2_SETUP.md  RELEASE_PROCESS.md
docs/deploy/: cron-sync.example.yml  docker.md  fly.md  github-actions.md  oauth-bootstrap.md
scripts/: bump-pyproject.test.js  bump-uv-lock.js  bump-uv-lock.test.js  check_repo_secrets.py  csv_to_json.py  release.sh
tests/: test_cli_and_reports.py  test_config_and_storage.py  test_critical_regressions.py  test_dashboard_integrations.py  test_dashboard_security.py  test_data_dir.py  test_dry_run_playlist.py  test_oauth_storage.py  test_security_quota_ranking.py  test_sleep_config.py  test_sleep_playlist_manager.py  test_sleep_ranker.py  test_sleep_store.py  test_youtube_metadata.py
tests/frontend/: dashboard.test.js
yt_sub_playlist/: __init__.py  __main__.py
yt_sub_playlist/auth/: __init__.py  oauth.py
yt_sub_playlist/config/: __init__.py  env_loader.py  quota_costs.py  schema.py
yt_sub_playlist/core/: __init__.py  atomic_io.py  paths.py  playlist_manager.py  quota_log.py  runtime_state.py  sleep_ranker.py  sleep_store.py  video_filtering.py  youtube_client.py
yt_sub_playlist/scripts/: dryrun.sh  quota_simulator.py  run.sh
