[project]
name = "youtube-sleep-queue"
version = "4.1.0"
description = "Automatically discovers, ranks and adds personalised sleep-suitable videos from your YouTube subscriptions."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
keywords = [
  "youtube",
  "playlist",
  "automation",
  "ollama",
  "python",
  "recommendation-system",
  "youtube-api",
]
dependencies = [
  "google-api-python-client==2.198.0",
  "google-auth==2.55.1",
  "google-auth-oauthlib==1.4.0",
  "google-auth-httplib2==0.4.0",
  "python-dotenv==1.2.2",
]

[project.optional-dependencies]
dashboard = [
  "Flask==3.0.0",
  "Flask-CORS==4.0.0",
  "Werkzeug==3.0.6",
]

[project.scripts]
youtube-sleep-queue = "yt_sub_playlist.__main__:main"
yt-sub-playlist = "yt_sub_playlist.__main__:main"

[project.urls]
Homepage = "https://github.com/AgentTwiice/YouTube-Sleep-Queue"
Repository = "https://github.com/AgentTwiice/YouTube-Sleep-Queue.git"
Upstream = "https://github.com/keif/playlist-from-subs"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["yt_sub_playlist"]
